# docker-chromadb-lab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pull_model.sh  pyproject.toml  sample_data.jsonl
data/: data.json  data.jsonl  questions_answers.json  questions_answers.jsonl
data/answers/: answers.jsonl
data/output/: data.jsonl
data/output/2025-04-25/: data.jsonl
infra/: ecs.tf  efs.tf  iam.tf  logs.tf  networking.tf  provider.tf  variables.tf
scripts/: deploy.sh  destroy-all.sh  run_ecs_task.sh
src/: config.py  helpers.py  main.py
