[project]
name = "docker-chromadb-lab"
version = "0.1.0"
description = "A lab for experimenting with ChromaDB in Docker"
requires-python = ">=3.8"
dependencies = ["chromadb", "numpy"]

[project.optional-dependencies]
dev = ["black==24.3.0", "isort==5.10.1", "pylint==3.0.3", "pre-commit==3.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
