[project]
name = "docker-chromadb-lab"
version = "0.1.0"
description = "A lab environment for experimenting with ChromaDB in Docker"
authors = [{ name = "Emiiano Frigo" }]
dependencies = [
    "chromadb==1.0.6",
    "numpy==2.0.2",
    "sentence-transformers==4.1.0",
    "docling==2.30.0",
    "pandas==2.2.3",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black==24.3.0", "isort==5.10.1", "pylint==3.0.3", "pre-commit==3.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
